# mm-pipe

./: .gitignore  LICENSE  README.md  pyproject.toml
mm_pipe/: main.py
mm_pipe/completions/: _mm-pipe  mm-pipe.completion.bash  mm-pipe.completion.zsh  mm-pipe.fzf.bash  mm-pipe.fzf.sh  mm-pipe.fzf.zsh
mm_pipe/tests/: __init__.py  test_binary.py  test_content_processing.py  test_highlight.py  test_tokencmd.py
